# bounce

./: LICENSE  README.md  bounce.cabal  experiment.py  open_questions.md  shear.py  sq1.cfg  sq1.gen  sq1.xml  sq2.cfg  sq2.gen  stack.yaml  test.xml  utils
app/: .Main.hs.swp  Animate.hs  EdgeGraph.hs  Main.hs  PaperFigs.hs
doc/bobadilla_collab/: BouncingRobots.html  BouncingRobots.md
doc/dynamics_days/: Illinois-Logo-Full-Color-CMYK.eps  Nilles_poster.run.xml
doc/figs/: mkPlane.py  uclogo_horz_bold.eps  uclogo_horz_bold.tif
doc/hardware/: BounceBodyV2.STL
doc/hardware/nrf52/: nrf52_stm32f302.GBL  nrf52_stm32f302.GBO  nrf52_stm32f302.GBS  nrf52_stm32f302.GTL  nrf52_stm32f302.GTO  nrf52_stm32f302.GTS  nrf52_stm32f302.TXT  nrf52_stm32f302.bor  toollist.nrf52_stm32f302.drl
doc/iros_paper/: CommentsToAuthor.txt  IROS2017.ppt  Review11187.txt  Review4803.txt  refs.bib
doc/resolution/: resolution.tex
dynamics_days/: Makefile  Nilles_poster.tex  abstract
examples/: experiment.py  wafr_talk.sh
paper/: NilBecLav_IROS_17.tex  paper.md  refs.bib  root.tex
proofs/: paper.md  proofs.md
sage_sims/: fp.sage
sage_simulations/: fp.sage
src/: .BounceSim.hs.swp  .Maps.hs.swp  AnalyzeMap.hs  Animate.hs  BounceSim.hs  GenDiagrams.hs  GenHA.hs  GenMapFns.hs  HA.hs  Maps.hs  Maps.yaml  MonadBounce.hs  Refine.hs
src/Bounce/: Animate.hs  Chart.hs  Diagrams.hs  GenMapFns.hs  GenSpaceEx.hs  MonadBounce.hs  Refine.hs  Simulate.hs  SpaceEx.hs
src/Diagrams/: Environments.hs
test/: Main.hs  Spec.hs  VizTests.hs
test/Test/: GenMapFnsSpec.hs  SimSpec.hs  SpaceExSpec.hs
tests/: visTests
