name:                bounce
version:             0.1.0.0
synopsis:            bouncing robots simulator
description:         Please see README.md
homepage:            https://github.com/alexandroid000/robot_models#readme
license:             BSD3
license-file:        LICENSE
author:              Alli Nilles
maintainer:          nilles2@illinois.edu
copyright:           2016 Author name here
category:            Robotics
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     BounceSim
                     , Maps
                     , AnalyzeMap
  build-depends:       base >= 4.7 && < 5
                     , diagrams-core >= 1.1
                     , diagrams-lib >= 1.3
                     , diagrams-svg >= 1.3
                     , data-default-class
                     , Chart >= 1.6
                     , Chart-diagrams >= 1.6
                     , lens
                     , colour
  default-language:    Haskell2010
  extensions:          NoMonomorphismRestriction
                     , FlexibleContexts

executable bounce-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bounce
                     , random
                     , diagrams-svg >= 1.3
  default-language:    Haskell2010
  extensions:          NoMonomorphismRestriction
                     , FlexibleContexts

source-repository head
  type:     git
  location: https://github.com/githubuser/bounce
