name:                bounce
version:             0.1.0.0
synopsis:            bouncing robots simulator
description:         Please see README.md
homepage:            https://github.com/alexandroid000/bounce#README
license:             OtherLicense
license-file:        LICENSE
author:              Alli Nilles
maintainer:          nilles2@illinois.edu
copyright:           2016 Author name here
category:            Robotics
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     BounceSim
                     , Maps
                     , AnalyzeMap
  build-depends:       base >= 4.7 && < 5
                     , diagrams-core >= 1.1
                     , diagrams-lib >= 1.3
                     , diagrams-cairo >= 1.3
                     , diagrams-svg >= 1.3
                     , data-default-class
                     , Chart >= 1.6
                     , Chart-diagrams >= 1.6
                     , lens
                     , colour
                     , random
                     , fingertree
  default-language:    Haskell2010
  other-extensions:    NoMonomorphismRestriction
                     , FlexibleContexts

executable bounce-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bounce
                     , diagrams-svg >= 1.3
  default-language:    Haskell2010
  other-extensions:    NoMonomorphismRestriction
                     , FlexibleContexts

executable mkGif
  hs-source-dirs:      app
  main-is:             Animate.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -main-is AnimateBounce
  build-depends:       base
                     , bounce
                     , diagrams-core >= 1.1
                     , diagrams-lib >= 1.3
                     , diagrams-cairo >= 1.3
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/alexandroid000/bounce
