name:                bounce
version:             0.1.0.0
synopsis:            bouncing robots simulator
description:         Please see README.md
homepage:            https://github.com/alexandroid000/bounce#README
license:             OtherLicense
license-file:        LICENSE
author:              Alli Nilles
maintainer:          nilles2@illinois.edu
copyright:           2016 Author name here
category:            Robotics
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
                     , app
  exposed-modules:     BounceSim
                     , Maps
                     --, AnalyzeMap
                     --, MonadBounce
                     --, Animate
                     , GenDiagrams
                     , GenMapFns
                     , HA
                     , GenHA
  build-depends:       base >= 4.7
                     , diagrams-core >= 1.1
                     , diagrams-lib >= 1.3
                     , diagrams-cairo >= 1.3
                     , diagrams-svg >= 1.3
                     , data-default-class
                     , Chart >= 1.6
                     , Chart-diagrams >= 1.6
                     , lens
                     , colour
                     , random
                     , mtl
                     , hashmap >= 1.3
  default-language:    Haskell2010
  other-extensions:    NoMonomorphismRestriction
                     , FlexibleContexts


-- executable paper
--   hs-source-dirs:      app
--   main-is:             PaperFigs.hs
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   build-depends:       base
--                      , bounce
--                      , diagrams-svg >= 1.3
--                      , diagrams-lib >= 1.3
--   default-language:    Haskell2010
--   other-extensions:    NoMonomorphismRestriction

test-suite tests
  hs-source-dirs:       test
  type:                 exitcode-stdio-1.0
  main-is:              Spec.hs
  build-depends:        base >= 4.7 && < 6
                      , bounce
                      , diagrams-lib >= 1.3
                      , hspec >= 2.4
                      , QuickCheck >= 2.9
                      , raw-strings-qq >= 1.1
  default-language:     Haskell2010


executable bounce-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bounce
                     , diagrams-svg >= 1.3
                     , diagrams-cairo >= 1.3
                     , diagrams-lib >= 1.3
                     , random
                     , optparse-applicative >= 0.13
                     , hashmap >= 1.3
  default-language:    Haskell2010
  other-extensions:    NoMonomorphismRestriction
                     , DeriveGeneric


source-repository head
  type:     git
  location: https://github.com/alexandroid000/bounce
